add a XPath note

--- a/回顾.md
+++ b/回顾.md
@@ -160,6 +160,9 @@ function
 >>> def createClosure(arg):
         print('有参数闭包')
         def closure():
+        	# 如果需要修改 arg 变量,可以使用 nonlocal 申明
+        	# nonloacl arg
+        	# arg += 1
             print(arg)
         return closure
 >>> f = createClosure('我是闭包')
