--- a/排序算法.md
+++ b/排序算法.md
@@ -1,4 +1,6 @@
-## 选择排序
+## 排序算法
+
+### 选择排序 
 
 找到数组中最小的那个元素,然后将它和数组的第一个元素交换位置(如果第一个元素就是最小的元素,那么它就和自己交换),再次,在剩下的元素中找多最小的元素,将它与数组的第二个元素交换位置,以此往复,知道将整个数组排序完.
 
@@ -75,5 +77,55 @@ class Solution(object):
                     min_index = j
             self.exch(i, min_index)
             
+```
+
+### 插入排序
+
+将数组中的每一项插入到数组中已经排序好的适当位置中,在计算机视线中,为了要给插入的元素腾出空间,需要将其余元素在插入之前都向右移动一位.
+
+与选择排序一样,当前索引的左边的所有元素都是有序的,为了给更小的元素插入,所有的有序都有可能北移动
+
+> 对于随机排列的长度为 **N** 且住建部重复的数组,平均情况下插入排序需要的约 **N^2/4** 次比较以及 **N^2/4** 次交换.最坏情况下需要约 **N^2/2** 次比较和 **N^2/2** 次交换,最好情况下需要 **N-1** 次比较和 **0** 次交换.
+>
+> 证明:
+>
+> 通过一个 **NxN** 的轨迹表可以容易得到交换个比较的次数,最坏情况下的对角线之下的所有元素都需要移动位置,最好情况下都不需要移动.对于随机排列的数组,在平均情况下每个元素都可能向后移半个数组的长度,因此交换总数是对象线之下的元素总数的二分之一.
+
+![N*N 轨迹表](C:\Users\Dxigui\OneDrive\插入排序.PNG)
+
+
+
+代码实现:
+
+```python
+#!/usr/bin/env python3
+# -*- coding: utf-8 -*-
+
+class Solution(object):
+    def __init__(self, A):
+        self.A = A
+    def less(self, num_a, num_b):
+        if num_a < num_b:
+            return True
+        else:
+            return False
+    def exch(self, i, min_index):
+        self.A[i], self.A[min_index] = self.A[min_index], self.A[i]
+    def show(self):
+        print(self.A)
+    def isSorted(self):
+        for i in range(1, len(self.A)):
+            if self.less(a[i-1], a[i]):
+                continue
+            else:
+                print(False)
+                return
+        print(True)
+    def insertSort(self):
+        length = len(self.A)
+        for i range(1, lenght):
+            for j in range(i, 0, -1):
+                if less(self.A[j-1], self.A[j]):
+                    exch(self.A, j, j-1)
 ```
 
