--- a/排序算法.md
+++ b/排序算法.md
@@ -105,7 +105,7 @@ class Solution(object):
     def __init__(self, A):
         self.A = A
     def less(self, num_a, num_b):
-        if num_a < num_b:
+        if num_a <= num_b:
             return True
         else:
             return False
@@ -115,7 +115,7 @@ class Solution(object):
         print(self.A)
     def isSorted(self):
         for i in range(1, len(self.A)):
-            if self.less(a[i-1], a[i]):
+            if self.less(self.A[i-1], self.A[i]):
                 continue
             else:
                 print(False)
@@ -123,9 +123,9 @@ class Solution(object):
         print(True)
     def insertSort(self):
         length = len(self.A)
-        for i range(1, lenght):
+        for i in range(1, length):
             for j in range(i, 0, -1):
-                if less(self.A[j-1], self.A[j]):
-                    exch(self.A, j, j-1)
+                if self.less(self.A[j-1], self.A[j]):
+                    self.exch(j, j-1)
 ```
 
