--- a/排序算法.md
+++ b/排序算法.md
@@ -62,7 +62,7 @@ class Solution(object):
         print(self.A)
     def isSorted(self):
         for i in range(1, len(self.A)):
-            if self.less(a[i-1], a[i]):
+            if self.less(self.A[i-1], self.A[i]):
                 continue
             else:
                 print(False)
@@ -73,7 +73,7 @@ class Solution(object):
         for i in range(length):
             min_index = i
             for j in range(i+1, length):
-                if self.less(a[j], a[min_index]):
+                if self.less(self.A[j], self.A[min_index]):
                     min_index = j
             self.exch(i, min_index)
             
