--- a/提问.md
+++ b/提问.md
@@ -92,3 +92,10 @@
 1. hash 算法
 2. python 中类的静态方法和类方法
 3. 深拷贝和浅拷贝
+4. 字典和 json 的区别
+5. session 和 cookie
+6. tornado 可以异步的原因
+7. tornado 核心模块
+8. reduce map filter
+9. 生成器和迭代器
+10. django 中 csrf_token 原理
