--- a/提问.md
+++ b/提问.md
@@ -87,15 +87,147 @@
    * ``is` : 判断变量对应的值的内存地址是否一致
    * `==` : 判断变量对应的值是否一致
 
+6. 并行与并发
+
+   * 并发: 一个处理器同时处理多个任务,并发事件之间不一定同时发生
+   * 并行: 多个处理器或多核同时处理多个不同任务
+
+7. `session` 和 `cookie`
+
+   * `cookie` : `cookie` 是存储在浏览器上的一短文本,常用于身份验证,服务器会话标志,站点首选项等
+   * `session` : `session`定义了用户与 Web 服务器持久交互的信息的服务器存储.
+   * `session` 和 `cookie` 组合: 服务器将用户的信息存储在 `session` 中,并生成一个用户信息的唯一标识符,保存在服务器端,将唯一标识符经 `cookie` 发送给浏览器(客户端),当下次浏览器请求服务器时,会将唯一标识符同 `cookie` 一起发送给服务器,服务器则通过唯一标识符验证并获取用户信息,达到安全持久会连接.
+
+8. 三次握手四次挥手
+
+   内容较多 跳转[三次握手四次挥手](https://github.com/jawil/blog/issues/14)
+
+9. `reduce map filter`
+
+   * `map(function, iterable)`  将函数作用到可迭代对象的每一个元素,并返回一个迭代器
+
+     ```python
+     # 定义一个函数
+     def mySum(num):
+         return num + 10
+     nums = [1,2,3,4,5]
+     # 将 mySum 函数作用到 nums 中的每个元素
+     s = map(mySum, nums)
+     print(s)
+     print(type(s))
+     print(list(s))
+     
+     # 输出
+     # <map object at 0x7fc32955fe48>
+     # <class 'map'>
+     # [11, 12, 13, 14, 15]
+     ```
+
+   * `reduce(function, iterable)` (Python 2.7 是内置函数可以直接使用,Python 3 后在 `functools` 模块下)
+
+     将函数作用到可多迭代对象的两个参数,`reduce` 将函数再次作用于函数返回的结果和序列下一个元素.从左至右.
+
+     ```python
+     # 将字符串转为整数
+     from functools import reduce
+     def strToInt(x, y):
+         return x * 10 + y
+     l = [1, 4, 2, 9, 4]
+     result = reduce(strToInt, l)
+     print(result)
+     
+     # 输出
+     # 14294
+     ```
+
+   * `filter(function, iterable)`
+
+     `filter` 把传入的函数作用每一个元素,根据返回值是 `True` or `False` 决定是否保留该元素
+
+     ```python
+     # 判断是否为奇数
+     def isOdd(num):
+         return num % 2 == 1
+     nums = range(10)
+     result = filter(isOdd, nums)
+     print(list(result))
+     
+     # 输出
+     # [1, 3, 5, 7, 9]
+     ```
+
+10. `print` 调用的底层方法
+
+    `print` 调用的是 `sys.stdout` ,Python 解释器的标准输出的 `File Object`,还包括 `sys.stin` 和 `sys.stderr` ,分别是解释器的标准输入和错误 `File Object`
+
+    * `stdin` 用于所有交互式输入
+    * `stdout` 用于 `print()` 
+    * `stderr` 用于解释器的提示及错误消息
+
+11. 生成器和迭代器
+
+    * 生成器是一个迭代器的子类
+
+      ```python
+      import collections, types
+      # issubclass 判断是否是某个类的子类
+      print(issubclass(types.GeneratorType, collections.Iterator))
+      # 打印 True
+      # 含有 yield 的函数是一个生成器
+      def define_gen():
+          yield
+      my_generator = define_gen()
+      print(type(my_generator))
+      print(isinstance(my_generator, collections.Iterator))
+      ```
+
+    * 迭代器是一个可迭代对象
+
+      ```python
+      print(issubclass(collections.Iterator, collections.Iterable))
+      
+      # 输出 True
+      ```
+
+      一个迭代器中需要有 `__iter__` 方法和 `next` 方法
+
+      ```python
+      # 自定义一个迭代器
+      class Squares(object):
+          def __init__(self, start, sopt):
+              self.start = start
+              self.stop = stop
+          def __iter__(self):
+              return self
+          def next(self):
+              if self.start >= self.stop:
+                  raise StopIteration
+              current = self.start * self.start
+              self.start += 1
+              return current
+      a, b = 1, 5
+      iterator = Squares(a, b)
+      # 调用 next() 
+      iterator.next()
+      ```
+
+      [参考](https://stackoverflow.com/questions/2776829/difference-between-pythons-generators-and-iterators)
+
+12. 字典和 `json` 的区别
+
+    * Python 的字典是一种数据结构, `JSON` 是一种数据格式
+    * Python 字典的 `key` 是可以任意 `hash` 对象, `JSON` 只能是字符串
+    * Python 字典可以嵌套多种数据类型,`JSON` 只有 array
+
+    联系:
+
+    * `JSON ` 转字典: `json.loads()`
+    * 字典转 `JSON` : `json.dumps()`
+
 ## TODO
 
 1. hash 算法
 2. python 中类的静态方法和类方法
-3. 深拷贝和浅拷贝
-4. 字典和 json 的区别
-5. session 和 cookie
-6. tornado 可以异步的原因
-7. tornado 核心模块
-8. reduce map filter
-9. 生成器和迭代器
-10. django 中 csrf_token 原理
+3. tornado 可以异步的原因
+4. tornado 核心模块
+5. django 中 csrf_token 原理
