--- a/提问.md
+++ b/提问.md
@@ -75,16 +75,17 @@
    5. 客户端根据服务器发送的格式进行解析
 
 3. Numpy 中转置的方法
-   * `array.T``
-   * ``array.transpose`
-   * array.swapaxes`
+   * `array.T`
+   * `array.transpose`
+   * `array.swapaxes`
 
 4. `python` 的垃圾回收机制
 
    `python` 的垃圾回收机制是采用的**引用计数( Reference Counting)**为主,**标记-清除**和**分代收集** 为辅的机制.[更多详情](https://foofish.net/python-gc.html)
 
-5. `is` 和 `== ``
-   * ``is` : 判断变量对应的值的内存地址是否一致
+5. `is` 和 `== `
+
+   * `is` : 判断变量对应的值的内存地址是否一致
    * `==` : 判断变量对应的值是否一致
 
 6. 并行与并发
