--- a/提问.md
+++ b/提问.md
@@ -129,7 +129,7 @@
      将函数作用到可多迭代对象的两个参数,`reduce` 将函数再次作用于函数返回的结果和序列下一个元素.从左至右.
 
      ```python
-     # 将字符串转为整数
+     # 将列表转为整数
      from functools import reduce
      def strToInt(x, y):
          return x * 10 + y
