--- a/提问.md
+++ b/提问.md
@@ -225,6 +225,64 @@
     * `JSON ` 转字典: `json.loads()`
     * 字典转 `JSON` : `json.dumps()`
 
+13. 鸭子类型
+
+    不需要严格的继承体系,在上面生成器和迭代器中,自定义迭代器时,只要类中有实现 `__iter__` 和 `next()` 方法,就可以视为迭代器,并不需要继承迭代器.
+
+14. 工厂模式
+
+    1. 抽象工厂角色:工厂模式核心,与应用程序无关,是具体工厂角色必须实现的接口或则必须继承的父类.
+    2. 具体工厂角色:含有具体业务逻辑代码,由应用程序调用以创建对应的具体产品对象
+    3. 抽象产品角色:是具体产品继承的父类或则是实现的接口
+    4. 具体产品角色:具体工厂角色所创建的对象就是此角色的实例
+
+    ```python
+    # 工厂函数代码实例
+    
+    class Car(object):
+        """抽象工厂角色"""
+        def drive(self):
+            pass
+    
+    class BMW(Car):
+        """具体工厂角色 A,继承自 Car"""
+        def __init__(self, carname):
+            self.__name = carname
+        def drive(self):
+            print('Drive the BMW as %s' % self.__name)
+    
+    class Benz(Car):
+        """具体工厂角色 B,继承自 Car"""
+        def __init__(self, carname):
+            self.__name = carname
+        def drive(self):
+            print('Drive the BMW as %s' % self.__name)
+    
+    class Driver(object):
+        """抽象产品角色"""
+        def driverCar(self):
+            return Car()
+        
+    class BMWDriver(Driver):
+        """具体产品角色 A, 继承 Driver"""
+        def driverCar(self):
+            return BMW("BMW")
+        
+    class BenzDriver(Driver):
+        """具体产品角色 B, 继承 Driver"""
+        def driverCar(self):
+            return Benz("Benz")
+        
+    if __name__ == '__main__':
+        driver=BMWdriver()
+        car=driver.driverCar()
+        car.drive()
+        driver=Benzdriver()
+        car=driver.driverCar()
+        car.drive()
+    ```
+
+
 ## TODO
 
 1. hash 算法
@@ -232,3 +290,7 @@
 3. tornado 可以异步的原因
 4. tornado 核心模块
 5. django 中 csrf_token 原理
+6. Linux 解压
+7. 列表去重
+8. 共享属性
+9. 全局锁
