--- a/机器学习.md
+++ b/机器学习.md
@@ -146,7 +146,7 @@ $$
 
 ### 常见的损失函数
 
-1. 平方损失 ($$ {L_2} $$ 损失) 损失函数
+1. 平方损失 ( {L_2}  损失) 损失函数
 
 单个样本损失
 $$
@@ -167,7 +167,7 @@ $$
 * $$ {D} $$ : 包含对个有标签的样本的数据集, 即 $$ ({x,y}) $$
 * $$ {N} $$ : $$ {D} $$ 中的样本数量
 
-3. 军方跟误差(RMSE)
+3. 均方根误差(RMSE)
 
 ## 降低损失
 
