--- a/机器学习.md
+++ b/机器学习.md
@@ -123,14 +123,12 @@ $$
 y^{'} = b + {w_1}{x_1}
 $$
 
-* $$ y^{'} $$  :指的是预测标签
+*  y^{'}   :指的是预测标签
 
-* $$ {b} $$ : 指的是偏差,有时候为 $$ {w_0} $$
-* $$ {w_1} $$ :特征 1 的权重
+*  {b}  : 指的是偏差,有时候为  {w_0} 
+* $$ {w_1} $$ :特征 1 的权重 
 
-* $$ {w_1} $$:特征 1 的权重
-
-* $$ {x_1} $$ : 指的是特征
+*  {x_1}  : 指的是特征
 
 2. 多特征复杂模型
 
