--- a/demo/DecisionTree.ipynb
+++ b/demo/DecisionTree.ipynb
@@ -50,10 +50,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "from math import log\n",
+    "from collections import Counter\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_data():\n",
+    "    datasets = [['青年', '否', '否', '一般', '否'],\n",
+    "               ['青年', '否', '否', '好', '否'],\n",
+    "               ['青年', '是', '否', '好', '是'],\n",
+    "               ['青年', '是', '是', '一般', '是'],\n",
+    "               ['青年', '否', '否', '一般', '否'],\n",
+    "               ['中年', '否', '否', '一般', '否'],\n",
+    "               ['中年', '否', '否', '好', '否'],\n",
+    "               ['中年', '是', '是', '好', '是'],\n",
+    "               ['中年', '否', '是', '非常好', '是'],\n",
+    "               ['中年', '否', '是', '非常好', '是'],\n",
+    "               ['老年', '否', '是', '非常好', '是'],\n",
+    "               ['老年', '否', '是', '好', '是'],\n",
+    "               ['老年', '是', '否', '好', '是'],\n",
+    "               ['老年', '是', '否', '非常好', '是'],\n",
+    "               ['老年', '否', '否', '一般', '否'],\n",
+    "               ]\n",
+    "    columns = ['年龄', '有工作', '有自己的房子', '信贷情况', '类别']\n",
+    "    # 返回数据集和每个维度的名称\n",
+    "    return datasets, columns\n",
+    "datasets, columns = create_data()\n",
+    "train_data = pd.DataFrame(datasets, columns=columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def empiricalEntropy(train_data, label):\n",
+    "    \"\"\"\n",
+    "    经验熵\n",
+    "    train_data: 数据集\n",
+    "    label: 目标集\n",
+    "    \"\"\"\n",
+    "    data_length = len(train_data)\n",
+    "    labels_count = train_data[label].value_counts()\n",
+    "    pi = [label / data_length for label in labels_count]\n",
+    "    entropy = -sum([(p * log(p, 2)) for p in pi])\n",
+    "    return entropy\n",
+    "\n",
+    "def empiricalConditionalEntropy(train_data, columns):\n",
+    "    \"\"\"\n",
+    "    条件经验熵\n",
+    "    \"\"\"\n",
+    "    data_length = len(train_data)\n",
+    "    labels = pd.unique(train_data[columns[-1]])\n",
+    "    labels_length = len(labels)\n",
+    "    result = {}\n",
+    "    for col in columns[:-1]:\n",
+    "        attr_name = pd.unique(train_data[col])\n",
+    "        attr_count = train_data[col].value_counts()\n",
+    "        tmp = []\n",
+    "        for name, count in zip(attr_name, attr_count):\n",
+    "            # 特征的一个属性属于某类的概率\n",
+    "            pi = [len(train_data[train_data[col] == name][train_data[columns[-1]] == label]) / count for label in labels]\n",
+    "            entropy = -sum([p * log(p, 2) for p in pi if p != 0.0]) * (count / data_length)\n",
+    "            tmp.append(entropy)\n",
+    "        result[col] = sum(tmp)\n",
+    "    max_entropy = sorted(result.items(), key=lambda x: x[1])[0]\n",
+    "    return max_entropy\n",
+    "\n",
+    "def infoGain(emp_en, con_en):\n",
+    "    return emp_en - con_en\n",
+    "\n",
+    "def main(train_data, label, columns):\n",
+    "    columns = columns + [label]\n",
+    "    emp_en = empiricalEntropy(train_data, label)\n",
+    "    con_en = empiricalConditionalEntropy(train_data, columns)\n",
+    "    result = infoGain(emp_en, con_en[1])\n",
+    "    text = '特征({})的信息增益最大为{}，选择为根节点特征'.format(con_en[0], result)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dxigui/.local/lib/python3.6/site-packages/ipykernel_launcher.py:27: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'特征(有自己的房子)的信息增益最大为0.4199730940219749，选择为根节点特征'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "main(train_data, '类别', ['年龄', '有工作', '有自己的房子', '信贷情况'])"
+   ]
   }
  ],
  "metadata": {
