--- a/demo/DecisionTree.ipynb
+++ b/demo/DecisionTree.ipynb
@@ -59,7 +59,19 @@
     "\n",
     "### C4.5 算法\n",
     "C4.5 算法是基于信息增益比构建决策树\n",
-    "## 决策树剪枝"
+    "## 决策树剪枝\n",
+    "决策树的剪枝能解决决策树的过拟合问题,剪枝分预剪枝和后剪枝  \n",
+    "决策剪枝通过极小化决策树整体的损失函数或代价函数实现  \n",
+    "示例:  \n",
+    "设树 T 的叶结点个数为 ||T, t 是数 T 的叶结点,该叶结点有 $ N_t $ 个样本点,其中 k 类的样本点有 $ N_tk $ 个,k=1,2,...,K,$ H_t(T) $为叶结点 t 上的经验熵, a >= 0 的参数  \n",
+    "损失函数:  \n",
+    "$ C_{\\alpha}(T)=\\sum_{t=1}^{|T|}N_tH_t(T) + \\alpha|A| $  \n",
+    "经验熵:  \n",
+    "$ H_t(T)=-\\sum_{k}\\frac{N_{tk}}{N_t}log\\frac{N_tk}{N_t} $\n",
+    "则损失函数:  \n",
+    "$ C(T)=\\sum_{t=1}^{|T|}N_tH_t(T)=-\\sum_{t=1}^{|T|}\\sum_{k}^{K}\\frac{N_{tk}}{N_t}log\\frac{N_tk}{N_t} $  \n",
+    "$ C_{\\alpha}(T)=C(T)+\\alpha|T| $  \n",
+    "通过比较剪枝前后的损失函数的大小决定是否剪枝."
    ]
   },
   {
